--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         }
 
         function updateScore() {
-            scoreDisplay.textContent = `Score: ${score}`;
+            scoreDisplay.textContent = `${score}`;
         }
 
         function updateProgressBar() {
