--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             font-size: 24px;
             z-index: 1;
         }
-        #progress, #energy, #reverse-progress {
+        #progress, #reverse-progress {
             position: absolute;
             width: 242px;
             height: 10px;
@@ -43,23 +43,15 @@
             left: 50%;
             transform: translateX(-50%);
         }
-        #energy {
-            top: 329px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
         #reverse-progress {
             bottom: 120px;
             left: 50%;
             transform: translateX(-50%);
         }
-        #progress-bar, #energy-bar, #reverse-progress-bar {
+        #progress-bar, #reverse-progress-bar {
             height: 100%;
         }
         #progress-bar {
-            background: linear-gradient(to right, #385682, #5297FF);
-        }
-        #energy-bar {
             background: linear-gradient(to right, #385682, #5297FF);
         }
         #reverse-progress-bar {
@@ -72,9 +64,6 @@
     <div id="progress">
         <div id="progress-bar"></div>
     </div>
-    <div id="energy">
-        <div id="energy-bar"></div>
-    </div>
     <div id="reverse-progress">
         <div id="reverse-progress-bar"></div>
     </div>
@@ -84,10 +73,8 @@
         const ctx = canvas.getContext('2d');
         const scoreDisplay = document.getElementById('score');
         const progressBar = document.getElementById('progress-bar');
-        const energyBar = document.getElementById('energy-bar');
         const reverseProgressBar = document.getElementById('reverse-progress-bar');
         let score = 0;
-        let energy = 1.0; // Energy level from 0 to 1
         let reverseProgress = 1.0; // Reverse progress level from 1 to 0
 
         const bgImg = new Image();
@@ -160,10 +147,6 @@
                 ctx.drawImage(coinImg, coinX, coinY, coinWidth, coinHeight);
             }
 
-            energy -= 0.001; // Decrease energy over time
-            if (energy < 0) energy = 0;
-            updateEnergyBar();
-
             reverseProgress -= 0.001; // Decrease reverse progress over time
             if (reverseProgress < 0) reverseProgress = 0;
             updateReverseProgressBar();
@@ -180,10 +163,6 @@
             progressBar.style.width = `${progress * 100}%`;
         }
 
-        function updateEnergyBar() {
-            energyBar.style.width = `${energy * 100}%`;
-        }
-
         function updateReverseProgressBar() {
             reverseProgressBar.style.width = `${reverseProgress * 100}%`;
         }
@@ -196,7 +175,6 @@
             if (x > coinX && x < coinX + coinWidth && y > coinY && y < coinY + coinHeight) {
                 coinClicked = true;
                 score++;
-                energy = Math.min(energy + 0.1, 1.0); // Increase energy on click but not above 1.0
                 reverseProgress = 1.0; // Reset reverse progress on click
                 floatingTexts.push(new FloatingText('+1', x, y - 100)); // Initial position 100 pixels higher
 
