--- a/index.html
+++ b/index.html
@@ -3,281 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clicker Game</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
-
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000;
-            font-family: 'Goldman', cursive;
-        }
-        canvas {
-            border: 1px solid #fff;
-        }
-        #score {
-            position: absolute;
-            top: 120px;
-            text-align: center;
-            width: 100%;
-            color: white;
-            font-size: 24px;
-            z-index: 1;
-        }
-        #progress, #reverse-progress {
-            position: absolute;
-            width: 242px;
-            height: 10px;
-            background: #385682;
-            border-radius: 5px;
-            overflow: hidden;
-        }
-        #progress {
-            top: 170px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        #reverse-progress {
-            bottom: 164px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        #progress-bar, #reverse-progress-bar {
-            height: 100%;
-        }
-        #progress-bar {
-            background: linear-gradient(to right, #385682, #5297FF);
-        }
-        #reverse-progress-bar {
-            background: linear-gradient(to left, #385682, #900505);
-        }
-
-        /* Group 3 */
-        #group3 {
-            position: absolute;
-            width: 148px;
-            height: 49px;
-            left: 0px;
-            top: 79px;
-        }
-
-        /* Rectangle 5 */
-        #rectangle5 {
-            box-sizing: border-box;
-            width: 148px;
-            height: 49px;
-            background: #000000;
-            border: 2px solid #FFFFFF;
-            border-radius: 7px;
-        }
-
-        /* mail-inbox-envelope-notification--Streamline-Plump */
-        #mail-icon {
-            position: absolute;
-            width: 33px;
-            height: 33px;
-            left: 10px;
-            top: 7px;
-        }
-
-        /* Vector */
-        #vector1, #vector2, #vector3 {
-            position: absolute;
-            background: #FAE20C;
-        }
-
-        #vector1 {
-            left: 3.18%;
-            right: 7.36%;
-            top: 19.79%;
-            bottom: 32.29%;
-        }
-
-        #vector2 {
-            left: 3.12%;
-            right: 7.29%;
-            top: 58.19%;
-            bottom: 3.13%;
-        }
-
-        #vector3 {
-            left: 58.33%;
-            right: 4.17%;
-            top: 4.17%;
-            bottom: 58.33%;
-        }
-
-        /* connect wallet */
-        #connect-wallet {
-            position: absolute;
-            width: 99px;
-            height: 36px;
-            left: 48px;
-            top: 7px;
-            font-family: 'Koulen';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 91%;
-            letter-spacing: 0.22em;
-            color: #FFFFFF;
-        }
-
-    </style>
+    <title>Brain Coin</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="score">Score: 0</div>
-    <div id="progress">
-        <div id="progress-bar"></div>
+    <div class="container">
+        <header>
+            <div class="wallet-info">
+                <span id="wallet-address">Your Telegram Name & Wallet Info</span>
+                <span id="brain-coins">Coins: 0</span>
+            </div>
+            <div class="progress-bar-container">
+                <div class="progress-bar" id="progress-bar"></div>
+                <div class="energy-bar" id="energy-bar"></div>
+            </div>
+        </header>
+        <main>
+            <div class="clicker">
+                <img src="coin.png" id="coin" alt="Coin">
+                <img src="coin-push.png" id="coin-push" alt="Coin Push" style="display: none;">
+            </div>
+            <div class="controls">
+                <button id="buy-energy">Buy Energy</button>
+                <button id="boost">Boost</button>
+                <button id="share">Share</button>
+                <button id="airdrop">Airdrop</button>
+                <button id="chat">Chat</button>
+                <button id="mine">Mine</button>
+            </div>
+        </main>
+        <footer>
+            <p>Brain Coin - Developed by [The Brain's Family]</p>
+        </footer>
     </div>
-    <div id="reverse-progress">
-        <div id="reverse-progress-bar"></div>
-    </div>
-    <canvas id="gameCanvas" width="360" height="720"></canvas>
-    <div id="group3">
-        <div id="rectangle5"></div>
-        <img id="mail-icon" src="mail-inbox-envelope-notification--Streamline-Plump.png" alt="Mail Icon">
-        <div id="vector1"></div>
-        <div id="vector2"></div>
-        <div id="vector3"></div>
-        <div id="connect-wallet">Connect Wallet</div>
-    </div>
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-        const scoreDisplay = document.getElementById('score');
-        const progressBar = document.getElementById('progress-bar');
-        const reverseProgressBar = document.getElementById('reverse-progress-bar');
-        let score = 0;
-        let energy = 1.0; // Start with full energy
-        const energyDecrement = 1 / 100; // Energy decrease per click (100 clicks to deplete)
-        const energyRecoveryRate = 1 / (5 * 60); // Full recovery in 5 minutes (300 seconds)
-
-        const bgImg = new Image();
-        bgImg.src = 'BG.png';
-
-        const coinImg = new Image();
-        coinImg.src = 'coin.png';
-
-        const coinPushImg = new Image();
-        coinPushImg.src = 'coin-push.png';
-
-        let coinX = (canvas.width - 200) / 2;
-        let coinY = (canvas.height - 200) / 2;
-        let coinWidth = 200;
-        let coinHeight = 200;
-        let coinClicked = false;
-
-        const floatingTexts = [];
-
-        class FloatingText {
-            constructor(text, x, y) {
-                this.text = text;
-                this.x = x;
-                this.y = y;
-                this.alpha = 1.0;
-                this.fontSize = 20;
-                this.dy = 0; // Initial offset for smoother transition
-            }
-
-            update() {
-                this.dy += 0.5; // Increase movement speed
-                this.y -= 0.5; // Faster upward movement
-                this.alpha -= 0.01; // Decrease alpha more slowly for longer visibility
-            }
-
-            draw(ctx) {
-                ctx.globalAlpha = this.alpha;
-                ctx.font = `${this.fontSize}px Goldman`;
-                ctx.fillStyle = "rgb(255, 215, 0)"; // Bright yellow color
-                ctx.fillText(this.text, this.x, this.y + this.dy);
-                ctx.globalAlpha = 1.0;
-            }
-        }
-
-        bgImg.onload = function() {
-            ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
-            ctx.drawImage(coinImg, coinX, coinY, coinWidth, coinHeight);
-        };
-
-        function update() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
-
-            for (let i = 0; i < floatingTexts.length; i++) {
-                const text = floatingTexts[i];
-                text.update();
-                text.draw(ctx);
-            }
-
-            // Remove texts that are no longer visible
-            for (let i = floatingTexts.length - 1; i >= 0; i--) {
-                if (floatingTexts[i].alpha <= 0) {
-                    floatingTexts.splice(i, 1);
-                }
-            }
-
-            if (coinClicked) {
-                ctx.drawImage(coinPushImg, coinX, coinY, coinWidth, coinHeight);
-            } else {
-                ctx.drawImage(coinImg, coinX, coinY, coinWidth, coinHeight);
-            }
-
-            if (energy < 1) {
-                energy += energyRecoveryRate;
-                if (energy > 1) energy = 1;
-                updateReverseProgressBar();
-            }
-
-            requestAnimationFrame(update);
-        }
-
-        function updateScore() {
-            scoreDisplay.textContent = `Score: ${score}`;
-        }
-
-        function updateProgressBar() {
-            const progress = Math.min((score % 100) / 100, 1);
-            progressBar.style.width = `${progress * 100}%`;
-        }
-
-        function updateReverseProgressBar() {
-            reverseProgressBar.style.width = `${energy * 100}%`;
-        }
-
-        canvas.addEventListener('click', function(event) {
-            if (energy > 0) {
-                const rect = canvas.getBoundingClientRect();
-                const x = event.clientX - rect.left;
-                const y = event.clientY - rect.top;
-
-                if (x > coinX && x < coinX + coinWidth && y > coinY && y < coinY + coinHeight) {
-                    coinClicked = true;
-                    score++;
-                    energy -= energyDecrement;
-                    if (energy < 0) energy = 0;
-                    floatingTexts.push(new FloatingText('+1', x, y - 100)); // Initial position 100 pixels higher
-
-                    updateScore();
-                    updateProgressBar();
-                    updateReverseProgressBar();
-
-                    setTimeout(() => {
-                        coinClicked = false;
-                    }, 100);
-
-                    console.log("Score: " + score);
-                }
-            }
-        });
-
-        update();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
