--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
             </div>
             <div class="progress-bar-container">
                 <div class="progress-bar" id="progress-bar"></div>
+            </div>
+            <div class="energy-bar-container">
                 <div class="energy-bar" id="energy-bar"></div>
             </div>
         </header>
         <main>
             <div class="clicker">
                 <img src="coin.png" id="coin" alt="Coin">
-                <img src="coin-push.png" id="coin-push" alt="Coin Push" style="display: none;">
-            </div>
-            <div class="controls">
-                <button id="buy-energy">Buy Energy</button>
-                <button id="boost">Boost</button>
-                <button id="share">Share</button>
-                <button id="airdrop">Airdrop</button>
-                <button id="chat">Chat</button>
-                <button id="mine">Mine</button>
+                <div id="flying-values"></div>
             </div>
         </main>
+        <div class="controls">
+            <button id="buy-energy">Buy Energy</button>
+            <button id="boost">Boost</button>
+            <button id="share">Share</button>
+            <button id="airdrop">Airdrop</button>
+            <button id="chat">Chat</button>
+            <button id="mine">Mine</button>
+        </div>
         <footer>
-            <p>Brain Coin - Developed by [The Brain's Family]</p>
+            <p>Brain Coin - Developed by [Your Name]</p>
         </footer>
     </div>
     <script src="script.js"></script>
