--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
     <div class="container">
         <header>
-            <div class="wallet-info">
-                <span id="wallet-address">Your Telegram Name & Wallet Info</span>
+            <div class="wallet-info" id="auth-section">
+                <span id="auth-status">Please log in with Telegram</span>
+                <button id="login-button">Log in with Telegram</button>
+            </div>
+            <div class="wallet-info" id="game-info" style="display: none;">
+                <span id="wallet-address">Your Telegram Name</span>
                 <span id="brain-coins">Coins: 0</span>
             </div>
             <div class="progress-bar-container">
@@ -38,6 +42,12 @@
             <p>Brain Coin - Developed by [Your Name]</p>
         </footer>
     </div>
+    <script src="https://telegram.org/js/telegram-widget.js?7"
+            data-telegram-login="your_telegram_bot_username" 
+            data-size="large"
+            data-radius="10"
+            data-auth-url="https://your-domain.com/auth"
+            data-request-access="write"></script>
     <script src="script.js"></script>
 </body>
 </html>
