--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </footer>
     </div>
     <script src="https://telegram.org/js/telegram-widget.js?7"
-            data-telegram-login="your_telegram_bot_username" 
+            data-telegram-login="Brain_Coinbot" 
             data-size="large"
             data-radius="10"
-            data-auth-url="https://your-domain.com/auth"
+            data-auth-url="https://your-deployed-server.com/auth"
             data-request-access="write"></script>
     <script src="script.js"></script>
 </body>
